# midi-mapper-debugger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: generate-icons-simple.js  generate-icons.js
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  file_manager.rs  lib.rs  main.rs  mapping_manager.rs  midi_manager.rs  types.rs
src/components/: ConflictAlerts.tsx  DeviceList.tsx  EventLog.tsx  Header.tsx  MappingTable.tsx  PresetManager.tsx  Visualizer.tsx
